# animated-fire

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
src/hooks/: GJDifficultySprite.cpp  LevelCell.cpp  LevelInfoLayer.cpp
src/ui/: FireSprite.cpp  FireSprite.hpp
